# zabbix-lua

./: .gitignore  configure.ac  lua_files  pushit.sh
frontends/php/: items.php
frontends/php/include/: defines.inc.php
include/: common.h  dbcache.h  zbxlua.h  zbxself.h
old_zbxlua_code/: configure.in  lua_files
old_zbxlua_code/frontends/php/: items.php
old_zbxlua_code/frontends/php/include/: defines.inc.php  forms.inc.php  items.inc.php
old_zbxlua_code/include/: common.h  db.h  dbcache.h  lua_cfg.h  lua_uint64_lib.h  zbxself.h
old_zbxlua_code/m4/: lua.m4
old_zbxlua_code/src/libs/: Makefile.am
old_zbxlua_code/src/libs/zbxdbcache/: dbconfig.c
old_zbxlua_code/src/libs/zbxdbhigh/: host.c
old_zbxlua_code/src/libs/zbxlua/: Makefile.am  README  lua_zbxitem_lib.c  lua_zbxitem_lib.h  utils.c  utils.h
old_zbxlua_code/src/libs/zbxself/: selfmon.c
old_zbxlua_code/src/zabbix_server/: Makefile.am  server.c
old_zbxlua_code/src/zabbix_server/escalator/: escalator.c
old_zbxlua_code/src/zabbix_server/poller/: Makefile.am  checks_lua.c  checks_lua.h  poller.c
src/libs/: Makefile.am
src/libs/zbxdbcache/: dbconfig.c  dbconfig.h
src/libs/zbxlua/: lua_uint64_lib.c  lua_zbxitem_lib.c  zbxlua.c
src/libs/zbxself/: selfmon.c
src/zabbix_server/: server.c
src/zabbix_server/poller/: Makefile.am  checks_lua.c  checks_lua.h  poller.c
vagrant/: Vagrantfile  ansible.cfg  install-zabbix-rpm.yml  playbook.yml
vagrant/roles/zabbix_agent/handlers/: main.yml
vagrant/roles/zabbix_agent/tasks/: main.yml
vagrant/roles/zabbix_agent/templates/: zabbix_agent.conf
(+18 files in other folders)
